<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/secure_connect_scan"
          android:icon="@android:drawable/ic_menu_search"
          android:title="@string/secure_connect"
          android:showAsAction="never" />

    <item android:id="@+id/scan_qr_code"
          android:icon="@android:drawable/ic_menu_camera"
          android:title="@string/scan_qr_code"
          android:showAsAction="ifRoom|withText" />

    <item android:id="@+id/discoverable"
          android:orderInCategory="1"
          android:title="@string/discoverable"
          android:showAsAction="never" />

    <item android:id="@+id/new_tab"
          android:orderInCategory="2"
          android:showAsAction="never"
          android:title="@string/menu_new_tab" />

    <item android:id="@+id/add_bookmark"
          android:orderInCategory="3"
          android:showAsAction="never"
          android:title="@string/menu_add_bookmark" />

    <item android:id="@+id/open_bookmark"
          android:orderInCategory="4"
          android:showAsAction="never"
          android:title="@string/menu_open_bookmark" />

</menu>
